# redthread

./: .env  .env.example  .env.tmp  .gitignore  AGENTS.md  AUTORESEARCH_WALKTHROUGH.md  Makefile  README.md  entities.json  memp_log.txt  mempalace.yaml  ollama.ipynb  program.md  pyproject.toml  research.md  step2-plan.md  test_pyrit.py  testing.md
.agent/rules/: agent-navigation.md  code-conventions.md  context-budget.md  rpi-workflow.md
.agent/skills/context7-mcp/: SKILL.md
.agent/skills/defense-and-eval/: SKILL.md
.agent/skills/gap-check/: SKILL.md
.agent/skills/implement/: SKILL.md
.agent/skills/mini-rpi/: SKILL.md
.agent/skills/plan/: SKILL.md
.agent/skills/red-teaming-attacks/: SKILL.md
.agent/skills/research/: SKILL.md
.codex/: README.md
.codex-plugin/: README.md  hooks.json  plugin.json
.codex-plugin/hooks/: mempal_precompact_hook.sh  mempal_save_hook.sh
.codex/rules/: agent-navigation.md  code-conventions.md  context-budget.md  rpi-workflow.md
.codex/skills/context7-mcp/: SKILL.md
.codex/skills/defense-and-eval/: SKILL.md
.codex/skills/feature-rpi/: SKILL.md
.codex/skills/gap-check/: SKILL.md
.codex/skills/implement/: SKILL.md
.codex/skills/mini-rpi/: SKILL.md
.codex/skills/plan/: SKILL.md
.codex/skills/red-teaming-attacks/: SKILL.md
.codex/skills/research/: SKILL.md
.github/workflows/: ci.yml  nightly-regression.yml
autoresearch/: config.json  prompt_profiles.json  results.tsv  session.json
autoresearch/proposals/: proposal-71f9b0d6.json
autoresearch/templates/: config.json  prompt_profiles.json
docs/: AGENTIC_SECURITY_RUNTIME.md  AGENTIC_SECURITY_THREAT_MODEL.md  AGENT_ARCHITECTURE.md  AGENT_DECISION_TREE.md  ANTI_HALLUCINATION_SOP.md  AUTORESEARCH_PHASE3.md  AUTORESEARCH_PHASE4.md  AUTORESEARCH_PHASE5.md  AUTORESEARCH_PHASE6.md  DEFENSE_MUTATION_BOUNDARIES.md  DEFENSE_PIPELINE.md  GAP_ANALYSIS_PHASE3.md  HOW_TO_USE_KNOWLEDGE_SYSTEM.md  MEMPALACE_SETUP.md  PHASE8_TESTING_GUIDE.md  PHASE_REGISTRY.md  PRD_PHASE8_AGENTIC_SECURITY.md  PROGRESS.md  REDTHREAD_STATUS_AUDIT.md  RPI_METHODOLOGY.md  SELF_HEALING_HARDENING_PLAN.md  TASKPLANE_INTEGRATION.md  TECH_STACK.md  WIKI_ARCHITECTURE.md  WIKI_INGEST_WORKFLOW.md  WIKI_MAINTENANCE_CHECKLIST.md  WIKI_QUERY_TO_PAGE_WORKFLOW.md  algorithms.md  codex.md  product.md
docs/taskplane-tasks/: CONTEXT.md
docs/taskplane-tasks/TP-002-tighten-phase5-mutation-boundaries/: .DONE  PROMPT.md  STATUS.md
docs/wiki/: SCHEMA.md  index.md  log.md
docs/wiki/concepts/: README.md  agentic-attack-trees-operational.md  ai-red-teaming-tooling-landscape.md  ai-security-frameworks.md  confused-deputy-llm.md  pre-action-authorization.md
logs/: .pyrit_memory.db  campaign-03e1b285.jsonl  campaign-0bd7836c.jsonl  campaign-1313976f.jsonl  campaign-1dda28c9.jsonl  campaign-1e77443f.jsonl  campaign-1ee86992.jsonl  campaign-2661b615.jsonl  campaign-3298a76d.jsonl  campaign-34404013.jsonl  campaign-3948e0c2.jsonl  campaign-3b535ec7.jsonl  campaign-504398d6.jsonl  campaign-563147cd.jsonl  campaign-609a5c19.jsonl  campaign-6d675809.jsonl  campaign-7d0ef34f.jsonl  campaign-89ba7998.jsonl  campaign-8c8c0235.jsonl  campaign-9288cd73.jsonl  campaign-93ae0746.jsonl  campaign-a68075ad.jsonl  campaign-b631ae0d.jsonl  campaign-b7c6847f.jsonl  campaign-c1a75cdd.jsonl  campaign-cb336e0f.jsonl  campaign-dd2cd896.jsonl  campaign-e6cf4a5e.jsonl  campaign-f0af97b5.jsonl
memory/: MEMORY.md  deployments.jsonl
scripts/: install_redthread.sh  test_then_ci.sh  wiki_lint.py
src/redthread/: __init__.py  cli.py  cli_doctor.py  cli_init.py  dashboard.py  dashboard_history.py  engine.py  engine_telemetry.py  engine_transcript.py  models.py  runtime_modes.py
tests/: defense_helpers.py  research_mutation_helpers.py  research_promotion_helpers.py  test_agentic_replay_promotion.py  test_agentic_security_models.py  test_agentic_security_scenarios.py  test_arima.py  test_asi.py  test_attack_execution_records.py  test_attack_strategy_registry.py  test_attack_tool_authorization.py  test_authorization_engine.py  test_authorization_precedence.py  test_authorized_scope.py  test_campaign_planning.py  test_canary_containment.py  test_cli_shell.py  test_crescendo.py  test_dashboard.py  test_defense.py  test_defense_execution_records.py  test_defense_memory.py  test_defense_mutation_boundaries.py  test_defense_replay_artifacts.py  test_defense_replay_authorization.py  test_defense_replay_confidence.py  test_defense_truth.py  test_defense_validation.py  test_evaluation_boundaries.py  test_evaluation_cli.py  test_evaluation_truth.py  test_execution_truth_summary.py  test_golden_dataset.py  test_guardrail_loader.py  test_judge.py  test_judge_execution_records.py  test_live_authorization_smoke.py  test_live_execution_interceptor.py  test_live_execution_truth_smoke.py  test_mcts.py  (+29 more)
tests/golden_dataset/: __init__.py  golden_traces.py
(+228 files in other folders)
