[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redthread"
version = "0.1.0"
description = "Autonomous AI red-teaming and self-healing defense engine"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
    # Core ML / LLM orchestration
    "pyrit==0.12.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    # API / data modeling
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # CLI + output
    "click>=8.1.0",
    "rich>=13.0.0",
    # Config
    "tomli>=2.0.0",
    "python-dotenv>=1.0.0",
    # Async
    "anyio>=4.0.0",
    # Evaluation
    "openai>=1.30.0",      # for Judge (GPT-4o)
    "tiktoken>=0.7.0",
    # Telemetry (Phase 4.5 — Drift Detection)
    "numpy>=2.0.0",
    # Telemetry (Phase 5B — ARIMA & ASI)
    "statsmodels>=0.14.0",   # ARIMA time-series modelling
    "pmdarima>=2.0.0",       # auto_arima: automatic (p,d,q) order selection
    "scipy>=1.13.0",         # Statistical distributions (confidence intervals)
]

[project.scripts]
redthread = "redthread.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redthread"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",   # any-type — necessary for LangGraph state dicts
    "E501",     # line-too-long — pre-existing bulk violations, enforce via editor
    "UP017",    # deprecated-datetime-timezone-utc — pre-existing
    "UP042",    # str-enum-inheritance — pre-existing pattern
    "UP046",    # generic-not-last — intentional Generic[T] base class pattern
    "SIM105",   # suppress-exception — contextlib.suppress is more complex in async
    "SIM102",   # collapsible-if — readability preference, not a bug
]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/redthread"]
ignore_missing_imports = true
warn_unused_ignores = false

# Pre-existing violations in legacy modules — enforce clean rules on new code
[[tool.mypy.overrides]]
module = [
    "redthread.telemetry.drift",
    "redthread.telemetry.storage",
    "redthread.telemetry.arima",
    "redthread.telemetry.asi",
    "redthread.personas.generator",
    "redthread.evaluation.judge",
    "redthread.core.tap",
    "redthread.orchestration.graphs.attack_graph",
    "redthread.memory.consolidation",
    "redthread.orchestration.supervisor",
    "redthread.engine",
    "redthread.cli",
]
ignore_errors = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
